Check in missing new files

--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -46,7 +46,7 @@
                     <td>@block.Attributes.Date()</td>
                     <td>
                         <form method="post">
-                            <button asp-page="./RollBackTo" asp-route-hash="@block.Attributes.BlockHash" class="button is-danger">
+                            <button asp-page="./RollBackTo" asp-route-hash="@block.Attributes.BlockHash" class="button is-danger is-small">
                                 <span class="icon">
                                     <i class="fas fa-undo"></i>
                                 </span>
