Adding block details page

--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -22,7 +22,7 @@
             {
                 <tr>
                     <td>
-                        <a asp-page="/Explorer" asp-route-ref="block/@block.Attributes.Number">
+                        <a asp-page="./Details" asp-route-id="@block.Attributes.Number">
                             @block.Attributes.Number
                         </a>
                     </td>
